<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_home_screen"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/uidTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/emailTV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailTV"
        app:layout_constraintTop_toBottomOf="@+id/emailTV"
        app:layout_constraintVertical_bias="0.171" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.97">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignOut"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_out"
            app:cornerRadius="20dp" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:text="@string/text"
        app:layout_constraintBottom_toTopOf="@+id/emailTV"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.201" />




</androidx.constraintlayout.widget.ConstraintLayout>